<R11545> Applied title - date formatting to meeting in preview (TIR #2367); fixed alignment of preview area

--- a/ebms/ebms.nci.nih.gov/modules/custom/ebms_webforms/includes/ebms_webform.css
+++ b/ebms/ebms.nci.nih.gov/modules/custom/ebms_webforms/includes/ebms_webform.css
@@ -28,3 +28,5 @@
 #edit-submitted-receipts-upload-button {
     margin-bottom: 0px;
 }
+
+#preview-area { margin-left: 12px; }
